# awesome-ai-engineer

./: README.md
homeworks/: pyproject.toml
homeworks/HW02/: HW02.ipynb
homeworks/HW05/: HW05.ipynb
project/: pyproject.toml
project/data/: .gitignore  slovo.zip.dvc
project/notebooks/: eda_v1.ipynb
project/src/rslrecognition/: __init__.py
project/src/rslrecognition/dqa/: __init__.py
project/src/rslrecognition/settings/: paths.py
